--- a/Code/Resnet_Final.ipynb
+++ b/Code/Resnet_Final.ipynb
@@ -116,6 +116,7 @@
         "BASE_DIR     = \"/content/gdrive/My Drive/BreastCancer/breast/\"\n",
         "DATASET_MODE = [\"40X\", \"100X\", \"200X\", \"400X\"]\n",
         "base_path = \"/content/gdrive/My Drive/\"\n",
+        "breastclassification = 22\n"
         "img_height = 224\n",
         "img_width = 224\n",
         "img_channels = 3\n"
